@@ -8,7 +8,9 @@ Thanks!
 
 2.2.0.2202
 ----------
-- 
+- Fix bug in 2201 which broke saving a new smart folder.
+- Fix CGContext errors in the system console log caused by the Vienna tab control gradient background.
+- Add Growl events for file download success and failure.
 
 2.2.0.2201
 ----------
